<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="0.25"
            android:src="@drawable/sm3cropped" />

        <TextView
            android:id="@+id/shoutTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/KEY_EMERGENCY_SMS_TITLE"
            android:textColor="#ff000000"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panicMsgHolder"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/KEY_EMERGENCY_SMS_INTRO"
            android:textColor="#ff000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/configuredFriends"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/KEY_EMERGENCY_SMS_RECIPIENT_MOBILE"
                android:textColor="#ff000000" />

            <EditText
                android:id="@+id/configuredFriendsText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/panicMessage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="0.3"
                android:text="@string/KEY_EMERGENCY_SMS_EMERGENCY_MSG"
                android:textColor="#ff000000" />

            <EditText
                android:id="@+id/panicMessageText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/shoutBtn"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:text="@string/KEY_EMERGENCY_SMS_SEND_BUTTON" />

</LinearLayout>