<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="0.25"
            android:src="@drawable/sm3cropped" />

        <TextView
            android:id="@+id/wipeTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/KEY_WIPE_ACTIVITY_TITLE"
            android:textColor="#ff000000"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text="@string/KEY_WIPE_ACTIVITYTEXT"
            android:textColor="#ff000000" />

        <LinearLayout
            android:id="@+id/wipeDisplayHolder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wipeOptions"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/overrideWipePreferences"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/KEY_WIPE_EDIT_WIPE" />

        <Button
            android:id="@+id/wipeButton"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/KEY_WIPE_BTN_TITLE" />
    </LinearLayout>

</LinearLayout>