<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="0.25"
            android:src="@drawable/sm3cropped" />

        <TextView
            android:id="@+id/panicTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/KEY_PANIC_TITLE"
            android:textColor="#ff000000"
            android:textSize="26sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7" >

        <LinearLayout
            android:id="@+id/panicMsgHolder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/shoutReadoutTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/KEY_PANIC_MSG_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shoutReadout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/KEY_PANIC_WIPE_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/wipeItems"
                android:layout_width="fill_parent"
                android:layout_height="400dip" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/panicControl"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.15"
        android:textSize="64sp"
        android:textStyle="bold" />

</LinearLayout>